# tokenfuzz

./: .claudeignore  .geminiignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  mkdocs.yml  requirements.txt
.gemini/: settings.json
config/: gemini-no-memory.policy.toml  models.toml
docs/: contributing.md  development.md  getting-help.md  index.md
lib/: audit_debug.sh  audit_helpers.py  audit_log_summary.py  audit_runner.py  audit_scope.py  benchmark.py  benchmark_graph.py  benchmark_model_direct_render.py  benchmark_model_direct_usage.py  benchmark_runner.py  build_config.py  build_materialize.py  build_preflight.py  build_probe.py  build_routes.py  build_session_seed.py  cleanup.py  cluster_common.py  clusterfuzz_stacktrace.py  clusterfuzz_symbolizer.py  command_tools.py  crash_artifacts.py  crash_bundle.py  crash_bundle.sh  cvss4.py  edges.py  edges.sh  file_tools.py  finding_dedup.py  finding_keyer.py  finding_signature.py  fmt.sh  gemini_watchdog.py  gemini_watchdog.sh  languages.py  (+54 more)
targets/samples/sample-c/: CMakeLists.txt
targets/samples/sample-c/.audit/: build.sh
targets/samples/sample-c/include/: rcfg.h
targets/samples/sample-c/src/: rcfg.c  rcfg_cli.c
targets/samples/sample-cpp/: CMakeLists.txt  triage-output.json
targets/samples/sample-cpp/.audit/: build.sh
targets/samples/sample-cpp/include/: rbundle.hpp
targets/samples/sample-cpp/src/: rbundle.cpp  rbundle_cli.cpp
targets/samples/sample-rust/: Cargo.toml
targets/samples/sample-rust/.audit/: build.sh
targets/samples/sample-rust/src/: main.rs  reportkit.rs
(+441 files in other folders)
